# git-public-p1

./: .env.sample  .gitignore  .gitleaks.toml  .secrets.baseline  .trivyignore  README.md  docker-compose.yml  pyproject.toml  tool-versions.env
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postStart.sh
.github/: dependabot.yml  dependency-review-config.yml
.github/workflows/: codeql.yml  python-licenses.yml  python-quality-check.yml  security.yml  template_codeql.yml
docs/: CODE-QUALITY-CHECK.md  INCIDENT-RESPONSE-SECRET-LEAK.md  SECURITY-CHECKLIST.md  SECURITY.md
scripts/python_licenses/: license_findings_summary.py  pip_audit_findings_summary.py
scripts/security/: build_security_report_index.py  common.py  detect_secrets_summary.py  gitleaks_summary.py  trivy_summary.py
src/calc_app/: __init__.py  calc.py
tests/: conftest.py  test_calc_bdd.py
tests/features/: calculator.feature
tests/scripts/python_licenses/: test_license_findings_summary.py  test_pip_audit_findings_summary.py
tests/scripts/security/: test_build_security_report_index.py  test_detect_secrets_summary.py  test_gitleaks_summary.py  test_trivy_summary.py
tests/src/: test_calc.py
